--- a/styles.epub.css
+++ b/styles.epub.css
@@ -17,18 +17,65 @@ ol.toc li { list-style-type: none; margin: 0; padding: 0; }
     font-family: 'Ubuntu Mono Bold';
     src: url('UbuntuMono-B.ttf');
 }
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('OpenSans-Light.ttf');
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('OpenSans-LightItalic.ttf');
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('OpenSans-Regular.ttf');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('OpenSans-Italic.ttf');
+    font-weight: 400;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('OpenSans-Bold.ttf');
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('OpenSans-BoldItalic.ttf');
+    font-weight: 600;
+    font-style: italic;
+}
+
 body {
-    font-family: sans-serif;
+    font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     margin: 2em;
     font-size: 12pt;
+    font-weight: 400;
+    line-height: 16pt;
 }
 h1, h2 {
     font-family: 'Ubuntu Mono Bold', monospace;
+    font-weight: 300;
     font-size: 18pt;
+    line-height: 18pt;
 }
+
 h1 {
     text-transform: uppercase;
-    border-top: 5px solid #0F0;
+    letter-spacing: 1px;
+    border-top: 3px solid #0F0;
+    padding-top: 10px;
 }
 a {
     color: #000;
