--- a/styles.epub.css
+++ b/styles.epub.css
@@ -212,17 +212,11 @@ img.fig {
     height: auto;
 }
 
-
 a.glossref{
     vertical-align: super;
     line-height: normal;
-    font-size: smaller;
-    font-weight: normal;
+    font-size: 0.7em;
 }
 
 a.glossterm{
-    vertical-align: sub;
-    line-height: normal;
-    font-size: smaller;
-    font-weight: normal;
 }
