--- a/styles.epub.css
+++ b/styles.epub.css
@@ -255,6 +255,16 @@ div#cover-image{
     text-align:center;
 }
 
+div.end{
+    text-align:center;
+    page-break-before: always;
+    page-break-after: always;   
+}
+
+img.end{
+    margin-top:100px;
+}
+
 img {
     max-width: 100%;
     max-height: 100%;
